--- a/views/main.eta.html
+++ b/views/main.eta.html
@@ -3,14 +3,14 @@
 <section class="home" id="home">
   <div class="home-content">
     <h3>Welcome To Reservation App!</h3>
-    <p>Make easy reservations to <span class="multiple-text"></span></p>
+    <p>Make reservations <span class="multiple-text"></span></p>
     <% if (!it.user) { %>
       <a href="/auth/login" class="btn btn-dark ">Log In</a>
       <a href="/auth/register" class="btn btn-light">Register</a>
     <% }; %>
   </div>
   <div class="home-img">
-    <img src="../static/images/reservations.png" alt="">
+    <img src="../static/images/reservations.png" alt="" loading="lazy">
   </div>
 </section>
 
