--- a/static/styles/laundryCal.css
+++ b/static/styles/laundryCal.css
@@ -360,8 +360,8 @@
   align-items: center;
   justify-content: center;
   font-size: 1rem;
-  color: #878895;
-  border: 2px solid #878895;
+  color: #7fe36d;
+  border: 2px solid #7fe36d;
   opacity: 0.5;
   border-radius: 50%;
   background-color: transparent;
