--- a/views/register.eta.html
+++ b/views/register.eta.html
@@ -23,8 +23,8 @@
       <i class='bx bxs-lock-alt'></i>
     </div>
     <div class="input-box">
-      <input type="password" name="veryfication" value="<%= it.veryfication ? it.veryfication : "" %>" 
-      placeholder="Password veryfication" minlength="10" required>
+      <input type="password" name="verification" value="<%= it.verification ? it.verification : "" %>" 
+      placeholder="Password verification" minlength="10" required>
       <i class='bx bxs-lock-alt'></i>
     </div>
 
