--- a/views/main.eta.html
+++ b/views/main.eta.html
@@ -2,7 +2,7 @@
 
 <section class="home" id="home">
   <div class="home-content">
-    <h3>Welcome To Reservation App!</h3>
+    <h3>Effortless Laundry.</h3>
     <p>Make reservations <span class="multiple-text"></span></p>
     <% if (!it.user) { %>
       <a href="/auth/login" class="btn btn-dark ">Log In</a>
