--- a/static/styles/register.css
+++ b/static/styles/register.css
@@ -3,16 +3,16 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  /*background: linear-gradient(to top, #c471f5 0%, #fa71cd 100%);*/
-  background: url('../images/register1.jpg');
+  background: rgb(92, 92, 255);
+  /*background: url('../images/register1.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: center;*/
   padding: 2.5rem;
 }
 
 .wrapper {
   width: 42rem;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.08);
   border: .2rem solid rgba(255, 255, 255, .2);
 
   -webkit-backdrop-filter: blur(10rem);
