Big theme changes in main page

--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -1,6 +1,6 @@
 .footer-section {
   width: 100%;
-  background: rgb(24, 8, 63);
+  background: transparent;
   -webkit-backdrop-filter: blur(8rem);
   backdrop-filter: blur(8rem); 
   padding-top: 60px;
