--- a/views/layouts/layout.eta.html
+++ b/views/layouts/layout.eta.html
@@ -29,7 +29,7 @@
   <title>Reservation App</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #373c4f;">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #262937;">
     <!-- --> <a class="navbar-brand" href="/"><i class='bx bxs-home'></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -63,20 +63,14 @@
     <footer class="top">
       <div class="links">
         <div class="links-column">
-          <h2>Get Started</h2>
+          <h2>Useful links</h2>
           <a>Introduction</a>
           <a>Documentation</a>
-          <a>Usage</a>
-          <a>Globals</a>
-          <a>Elements</a>
         </div>
         <div class="links-column">
           <h2>Resources</h2>
           <a>API</a>
-          <a>Visibility</a>
-          <a>Accessibility</a>
-          <a>Community</a>
-          <a>Marketplace</a>
+          <a href="https://cankolho.github.io/CanKolho-Portfolio/">Contact me</a>
         </div>
         <!-- 
           <div class="links-column socials-column">
