1. config file for env variables 2. helper function 'timeparser' to reduce DRY 3. forgot-password feature, needs to be better but functionality is correct

--- a/views/login.eta.html
+++ b/views/login.eta.html
@@ -23,7 +23,7 @@
       <i class='bx bxs-lock-alt'></i>
     </div>
   
-    <a class="forgot" href="#">Forgot password?</a>
+    <a class="forgot" href="/forgot-password">Forgot password?</a>
 
     <input type="submit" value="Login" class="btn">
 
