--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -1,60 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<% layout("./layouts/resetPWLayout.html") %>
 
-    <link rel="icon" href="/static/images/icons8-calendar-16.png" type="image/x-icon">
+<div class="wrapper">
+  <form method="POST">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous" defer></script>
-
-    <title>Reset password</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Reset password</h1>
-      <br>
-
-      <% if (it.errors) { %>
+    <% if (it.errors) { %>
+      <ul class="errors">
         <% it.errors.forEach((error) => { %>
-        <h1 class="text-danger"><%= error %></h1>
-        <br>
-        <a href="/auth/login"> &larr; Go back</a>
+          <li><%= error %></li>
         <% }); %>
-      <% } else { %>
-        <form class="row g-3" method="POST">
-          <div class="col-auto">
-            <input type="text" readonly class="form-control-plaintext" name="email"  id="staticEmail2" value="<%= it.email ? it.email : "" %>">
-          </div>
-          <div style="display:none;">
-            <input type="password" name="fakepasswordremembered" autocomplete="off">
-          </div>
-          <div class="col-auto">
-            <input type="password" class="form-control" name="newPassword" placeholder="New Password">
-          </div>
-          <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3">Reset password</button>
-          </div>
-        </form>
-      <% } %>
+      </ul>
+    <% } else { %>
+    <h1>Reset password</h1>
+
+    <% if (it.PWerrors) { %>
+      <ul class="PWerrors">
+        <% it.PWerrors.forEach((error) => { %>
+          <li><%= error %></li>
+        <% }); %>
+      </ul>
+    <% } %>
+
+    <div class="input-box">
+      <input type="email" name="email" value="<%= it.email %>" readonly>
+      <i class='bx bx-envelope'></i>
     </div>
-  </body>
-</html>
+    <div style="display:none;">
+      <input type="password" name="fakepasswordremembered" autocomplete="off">
+    </div>
+    <div class="input-box">
+      <input type="password" name="newPassword"
+      placeholder="New password" minlength="10" required>
+      <i class='bx bxs-lock-alt'></i>
+    </div>
+    <div class="input-box">
+      <input type="password" name="confirmPassword"
+      placeholder="Confirm password" minlength="10" required>
+      <i class='bx bxs-lock-alt'></i>
+    </div>
+
+    <input type="submit" value="Reset password" class="btn">
+
+    <% } %>
+
+    <div class="register-link">
+      <p>
+        <a href="/auth/login"> &larr; Go back</a>
+      </p>
+    </div>
+  </form>
+</div>
