--- a/static/styles/mainPage.css
+++ b/static/styles/mainPage.css
@@ -45,19 +45,13 @@ span {
 
 .home-content p {
 	font-size: 1.6rem;
-	margin-right: .7rem;
 	margin-bottom: 2.5rem;
+  padding-left: 4.5rem;
 }
 
-.home-img img {
-	width: 35vw;
-	border-radius: .6rem;
-  margin-left: .8rem;
-	margin-right: .8rem;
-}
-
-.btn:hover {
-	box-shadow: none;
+.buttons {
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 991px) {
@@ -66,7 +60,6 @@ span {
 	}
 	
 	.home {
-    flex-direction: column;
     font-size: 62.5%;
   }
 }
@@ -78,10 +71,6 @@ span {
 
   .home-content p {
     font-size: 1.3rem;
+    padding-left: 2.2rem;
   }
-
-  .buttons {
-		display: flex;
-		justify-content: center;
-	}
 }
