--- a/static/styles/mainPage.css
+++ b/static/styles/mainPage.css
@@ -12,6 +12,10 @@
 }
 
 body {
+  background-color: #262937;
+}
+
+.background {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/laundry.jpg');
   background-size: cover;
   background-position: center;
