--- a/views/main.eta.html
+++ b/views/main.eta.html
@@ -1,16 +1,55 @@
 <% layout("./layouts/layout.eta.html") %>
 
-<section class="home" id="home">
-  <div class="home-content">
-    <h3>Effortless Laundry.</h3>
-    <p>Make reservations <span class="multiple-text"></span></p>
-    <% if (!it.user) { %>
-      <div class="buttons">
-        <a href="/auth/login" class="btn btn-primary">Log In</a>
-        <a href="/auth/register" class="btn btn-light">Register</a>
-      </div> 
-    <% } %>
-  </div>
-</section>
-
-
+<div class="background">
+  <section class="home" id="home">
+    <div class="home-content">
+      <h3>Effortless Laundry.</h3>
+      <p>Make reservations <span class="multiple-text"></span></p>
+      <% if (!it.user) { %>
+        <div class="buttons">
+          <a href="/auth/login" class="btn btn-primary">Log In</a>
+          <a href="/auth/register" class="btn btn-light">Register</a>
+        </div> 
+      <% } %>
+    </div>
+  </section>
+  
+  <section class="footer-section">
+    <footer class="top">
+      <div class="links">
+        <div class="links-column">
+          <h2>Useful links</h2>
+          <a>Introduction</a>
+          <a>Documentation</a>
+        </div>
+        <div class="links-column">
+          <h2>Resources</h2>
+          <a>API</a>
+          <a href="https://cankolho.github.io/CanKolho-Portfolio/">Contact me</a>
+        </div>
+        <!-- 
+          <div class="links-column socials-column">
+            <h2>Social Media</h2>
+            <p>
+              Follow us on social media to find out the latest updates on our
+              progress.
+            </p>
+            <div class="socials">
+              <a class="fa-brands fa-facebook"></a>
+              <a class="fa-brands fa-instagram"></a>
+              <a class="fa-brands fa-linkedin"></a>
+            </div>
+          </div>
+        -->
+      </div>
+    </footer>
+    <footer class="bottom">
+      <p class="copyright">© 2023 All rights reserved</p>
+      <div class="legal">
+        <a> License </a>
+        <a> Terms </a>
+        <a> Privacy </a>
+      </div>
+    </footer>
+  </section>
+</div>
