--- a/static/styles/dryingCal.css
+++ b/static/styles/dryingCal.css
@@ -204,12 +204,13 @@
   height: 50px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: right;
   gap: 5px;
   padding: 0 20px;
   margin-bottom: 20px;
   color: var(--primary-clr);
 }
+
 .calendar .goto-today .goto {
   display: flex;
   align-items: center;
@@ -410,42 +411,15 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 8px;
   padding: 20px;
 }
-.add-event-body .add-event-input {
-  width: 100%;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
-}
-.add-event-body .add-event-input input {
-  width: 100%;
-  height: 100%;
-  outline: none;
-  border: none;
-  border-bottom: 1px solid #f5f5f5;
-  padding: 0 10px;
-  font-size: 1rem;
-  font-weight: 400;
-  color: #373c4f;
-}
-.add-event-body .add-event-input input::placeholder {
-  color: #a5a5a5;
-}
-.add-event-body .add-event-input input:focus {
-  border-bottom: 1px solid var(--primary-clr);
-}
-.add-event-body .add-event-input input:focus::placeholder {
-  color: var(--primary-clr);
-}
+
 .add-event-footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 40px 20px 20px 20px;
 }
 .add-event-footer .add-event-btn {
   height: 40px;
@@ -527,22 +501,76 @@
   }
 }
 
-.credits {
+/*DROPDOWNS*/
+/*the container must be positioned relative:*/
+.custom-select {
+  position: relative;
+  height: 100%;
+  padding: 0;
+  border: none;
+}
+
+.time-select {
+  display: flex;
+  gap: 8px;
+  justify-content: space-between;
+}
+
+.custom-select select {
+  display: none; /*hide original SELECT element:*/
+}
+
+.select-selected {
+  background-color: #373c4f;
+}
+
+/*style the arrow inside the select element:*/
+.select-selected:after {
   position: absolute;
-  bottom: 0;
+  content: "";
+  top: 19px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+  border-color: #ffffff transparent transparent transparent;
+}
+
+/*point the arrow upwards when the select box is open (active):*/
+.select-selected.select-arrow-active:after {
+  border-color: transparent transparent #ffffff transparent;
+  top: 12px;
+}
+
+/*style the items (options), including the selected item:*/
+.select-items div,.select-selected {
+  color: white;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+  user-select: none;
+  border-radius: 10px;
+}
+
+/*style items (options):*/
+.select-items {
+  position: absolute;
+  background-color: #373c4f;
+  top: 100%;
   left: 0;
   right: 0;
-  text-align: center;
-  padding: 10px;
-  font-size: 12px;
-  color: #fff;
-  background-color: #b38add;
+  z-index: 99;
+  max-height: 115px;
+  border-radius: 10px;
+  overflow-y: scroll;
 }
-.credits a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: 600;
+
+/*hide the items when the select box is closed:*/
+.select-hide {
+  display: none;
 }
-.credits a:hover {
-  text-decoration: underline;
+
+.select-items div:hover, .same-as-selected {
+  background-color: rgba(0, 0, 0, 0.1);
 }
