--- a/views/layouts/registerLayout.eta.html
+++ b/views/layouts/registerLayout.eta.html
@@ -9,7 +9,7 @@
       content="Stay organized with our user-friendly Calendar featuring events, reminders, and a customizable interface. Built with HTML, CSS, and JavaScript. Start scheduling today!"
     />
     
-    <link rel="icon" href="/static/images/icons8-calendar-16.png" type="image/x-icon">
+    <link rel="website icon" href="/static/images/password.png" type="png">
 
     <link
       rel="stylesheet"
