--- a/views/layouts/loginLayout.eta.html
+++ b/views/layouts/loginLayout.eta.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <link rel="icon" href="/static/images/icons8-calendar-16.png" type="image/x-icon">
+    <link rel="website icon" href="/static/images/password.png" type="png">
 
     <link
       rel="stylesheet"
