--- a/views/layouts/registerLayout.eta.html
+++ b/views/layouts/registerLayout.eta.html
@@ -10,6 +10,7 @@
     />
     
     <link rel="website icon" href="/static/images/password.png" type="png">
+    <link rel="apple-touch-icon" href="/static/images/touch-icon-calendar.png" type="png">
 
     <link
       rel="stylesheet"
