--- a/views/layouts/resetPWLayout.html
+++ b/views/layouts/resetPWLayout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <link rel="website icon" href="/static/images/password.png" type="png">
+    <link rel="apple-touch-icon" href="/static/images/washing-machine.png" type="png">
 
     <link
       rel="stylesheet"
